# phora

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  LICENSE  README.md  USE-CASES.md  client.go  client_test.go  cliff.toml  config.go  config_test.go  digest_test.go  dist-workspace.toml  drift.go  drift_test.go  fetch_result.go  fetch_result_test.go  filter.go  filter_test.go  go.mod  hk.pkl  lockfile.go  lockfile_fixture_compliance_test.go  lockfile_test.go  lockfile_v1_schema_test.go  lockfile_v2_test.go  mise.toml  needs_sync_test.go  parse.go  parse_test.go  pathmap.go  pathmap_test.go  phora.example.toml  phora.local.example.toml  release-plz.toml  repo.go  repo_test.go
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/: fetch_sweep.sh  resolve.rs
cmd/phora/: main.go
docs/: RELEASING.md
docs/design/: shallow-sources.md
henia/: config.go  go.mod
internal/artifact/: artifact_test.go
internal/cli/: add.go  add_test.go  config_cmd.go  deploy.go  deprecation_test.go  init.go  install.go  list.go  prompt.go  prompt_test.go  root.go  sync.go  update.go  update_test.go
internal/config/: config.go  config_test.go  manifest_test.go  write.go  write_test.go
internal/defaults/: defaults.go  phora.toml
internal/lockfile/: lockfile.go  lockfile_test.go
internal/manifest/: manifest.go
internal/source/: source.go  source_test.go
internal/sync/: find_source_test.go  integration_test.go  sync.go  sync_test.go
internal/transform/: transform.go  transform_test.go
specs/archive/: README.md
src/: archive.rs  backend.rs  cli.rs  config.rs  deploy.rs  diagnostic.rs  error.rs  http.rs  import_legacy.rs  lib.rs  lock.rs  main.rs  matcher.rs  paths.rs  projection.rs  registry.rs  source.rs  store.rs  sync.rs  worktree.rs  worktree_apply.rs
src/cli/: add.rs  bind.rs  config_edit.rs  mod.rs  query.rs  render.rs  sync.rs  tests.rs  trust.rs
src/config/: hooks.rs  host.rs  migrate.rs  mod.rs  source.rs  target.rs  tests.rs  transitive.rs  transitive_tests.rs
tests/: bind_local_merged.rs  check_match_dotfile.rs  confine_name_pin.rs  digest_pin.rs  doc_invariants.rs  dotfile_optin.rs  error_contract.rs  error_text_pin.rs  exit_code.rs  frozen_readonly.rs  golden.rs  http_redirect_scheme.rs  kernel_pin.rs  link_mode_warning.rs  lock_contention.rs  migration_warnings.rs  name_pin.rs  namespace.md  paths_config.rs  phora.toml  project_identity.rs  selection_pin.rs  sync.md  transitive_compose.rs  transitive_confine.rs  transitive_hook_trust.rs  transitive_nested.rs  transitive_observers.rs  transitive_resolve.rs  transitive_trust_cli.rs  worktree_apply_cli.rs
(+161 files in other folders)
