[package]
name = "phora"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
filetime = "0.2.29"
flate2 = "1.1.9"
gix = { version = "0.84.0", features = ["blocking-network-client"] }
globset = "0.4.18"
minijinja = "2.5.0"
reflink-copy = "0.1.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tar = "0.4.46"
thiserror = "2"
toml = "1.1.2"
toml_edit = "0.25.12"
ureq = "3.3.0"
walkdir = "2.5.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.17"
insta = { version = "1.43.2", features = ["filters"] }
tempfile = "3.27.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
