[package]
name = "phora"
version = "0.1.2"
edition = "2024"
rust-version = "1.96"
description = "A git-based artifact package manager and multiplexer for content-addressed file distribution"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srnnkls/phora"
homepage = "https://github.com/srnnkls/phora"
documentation = "https://docs.rs/phora"
keywords = ["git", "artifact", "deploy", "sync", "content-addressed"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[dependencies]
blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
filetime = "0.2.29"
flate2 = "1.1.9"
gix = { version = "0.84.0", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
globset = "0.4.18"
minijinja = { version = "2.5.0", features = ["fuel"] }
rayon = "1.11"
reflink-copy = "0.1.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
strsim = "0.11.1"
tar = "0.4.46"
thiserror = "2"
toml = "1.1.2"
toml_edit = "0.25.12"
unicode-normalization = "0.1.25"
ureq = "3.3.0"
walkdir = "2.5.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[features]
# Re-exports internals (resolve_sources) for benchmarking only; off by default.
bench = []

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.5"
insta = { version = "1.43.2", features = ["filters"] }
tempfile = "3.27.0"

[[bench]]
name = "resolve"
harness = false
required-features = ["bench"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[profile.dist]
inherits = "release"
lto = "thin"
